[tool.poetry]
name = "pokemonredexperiments"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
stable-baselines3 = "^2.1.0"
gymnasium = "^0.29.1"
scikit-image = "<0.21"
scikit-learn = "^1.3.2"
pandas = "<2.0"
tqdm = "^4.66.1"
torch = "^2.1.0"
einops = "^0.7.0"
hnswlib = "^0.7.0"
numpy = "<1.24"
opencv-python = "<4.7"
seaborn = "^0.13.0"
pyboy = "^1.6.4"

tyro = "^0.5.5"
tensorboard = "^2.12.0"
jax = "0.4.8"
flax = "0.6.8"
optax = "0.1.4"
huggingface-hub = "^0.12.0"
jaxlib = "^0.4.7"
wandb = "^0.13.10"
tensorboardx = "^2.6"
chex = "0.1.5"
moviepy = "^1.0.3"
rlax = "^0.1.5"
ml-dtypes = "0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
